# shopping-cart

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deployLambdaFunction.yml
docs/: architecture.excalidraw
docs/tests/coverage/html/: class_index.html  function_index.html  index.html  status.json  z_6e20448ecec750a4___init___py.html  z_6e20448ecec750a4_app_py.html  z_6e20448ecec750a4_schemas_py.html  z_6e20448ecec750a4_settings_py.html
docs/tests/pytest/: junit.xml
shopping-cart-api/: main.py
shopping_cart_api/: app.py  schemas.py  settings.py
tests/: conftest.py  test_app.py
