[tool.poetry]
name = "shopping_cart_api"
version = "0.1.0"
description = ""
authors = ["willrockoliv <william.r.o.wro@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.2"
fastapi = {extras = ["standard"], version = "^0.115.4"}
mangum = "^0.19.0"
boto3 = "^1.35.54"
pydantic-settings = "^2.6.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
ruff = "^0.7.2"
taskipy = "^1.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.pytest.ini_options]
addopts = '--cov=./shopping_cart_api -v --disable-warnings --exitfirst -o log_cli=true -s'
testpaths = [
  "tests/"
]

[tool.taskipy.tasks]
format = 'ruff check . --fix; ruff format .'
run = 'fastapi dev shopping_cart_api/app.py'
test = 'pytest -s -x --cov=shopping_cart_api -vv'
cov = 'coverage html'
build = """
  poetry install --only main --sync &&
  rm -rf dist/ &&
  mkdir -p dist/lambda-package &&
  cp -Rv .venv/lib/python*/site-packages/* dist/lambda-package/ &&
  cp -Rv shopping_cart_api/ dist/lambda-package/ &&
  cd dist/lambda-package &&
  zip ../aws_lambda_artifact.zip -r .
"""